fix spacing between main and footer

--- a/css/_src/screen.scss
+++ b/css/_src/screen.scss
@@ -884,7 +884,7 @@ ol {
   /* Wrappers */
 
   #main-wrapper {
-    padding: 4em 0 4em 0;
+    padding: 4em 0 0 0;
   }
 
   /* Header */
@@ -1089,7 +1089,7 @@ ol {
   /* Wrappers */
 
   #main-wrapper {
-    padding: 2.75em 0 2.75em 0;
+    padding: 2.75em 0 0 0;
   }
 
   /* Header */
